--- a/www.cdep.ro/bd67acc2376a1b9f2edf13149662788ddd1121ff.html
+++ b/www.cdep.ro/bd67acc2376a1b9f2edf13149662788ddd1121ff.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Alexe_Florin_Alexandru.jpg" border=0 width="150" alt="Florin-Alexandru Alexe">
+<a href="/parlamentari/l2012/mari/Alexe_Florin_Alexandru.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Alexe_Florin_Alexandru.jpg" border=0 width="150" alt="Florin-Alexandru Alexe"></a>
 <br>b.  30 aug. 1979
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Florin-Alexandru ALEXE</h1>
 <div class="page-actions">
