--- a/www.cdep.ro/47d6bebc5ea6f9bbb038afa9faa77d15226059c1.html
+++ b/www.cdep.ro/47d6bebc5ea6f9bbb038afa9faa77d15226059c1.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Amet_Varol.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Amet_Varol.jpg" border=0 width="150" alt="Varol Amet"></a>
+<img src="/parlamentari/l2012/Amet_Varol.jpg" border=0 width="150" alt="Varol Amet">
 <br>b.  9 dec. 1972
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Varol AMET</h1>
 <div class="page-actions">
