--- a/www.cdep.ro/45d214bac83082a6aadf7d510100dc7b0e2b8b1f.html
+++ b/www.cdep.ro/45d214bac83082a6aadf7d510100dc7b0e2b8b1f.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Andea_Petru.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Andea_Petru.jpg" border=0 width="150" alt="Petru Andea"></a>
+<img src="/parlamentari/l2012/Andea_Petru.jpg" border=0 width="150" alt="Petru Andea">
 <br>b.  28 nov. 1949
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Petru ANDEA</h1>
 <div class="page-actions">
