--- a/www.cdep.ro/00e545a639548063aa502ad15df0863c76464c9f.html
+++ b/www.cdep.ro/00e545a639548063aa502ad15df0863c76464c9f.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Anghel_Gabriela_Lola.jpg" border=0 width="150" alt="Gabriela-Lola Anghel">
+<a href="/parlamentari/l2012/mari/Anghel_Gabriela_Lola.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Anghel_Gabriela_Lola.jpg" border=0 width="150" alt="Gabriela-Lola Anghel"></a>
 <br>b.  16 apr. 1973
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Gabriela-Lola ANGHEL</h1>
 <div class="page-actions">
