--- a/www.cdep.ro/b1646b258ce5c1ee058213f1b78c1d310a934382.html
+++ b/www.cdep.ro/b1646b258ce5c1ee058213f1b78c1d310a934382.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Antal_Istvan.jpg" border=0 width="150" alt="István Antal">
+<a href="/parlamentari/l2012/mari/Antal_Istvan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Antal_Istvan.jpg" border=0 width="150" alt="István Antal"></a>
 <br>b.  23 jun. 1948
 </div><div class="boxTitle"><h1 style="line-height: 110%;">ANTAL István</h1>
 <div class="page-actions">
