--- a/www.cdep.ro/7970659aa2ed9a01858d7362dee01d41fa77b8ca.html
+++ b/www.cdep.ro/7970659aa2ed9a01858d7362dee01d41fa77b8ca.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Avram_Marian.jpg" border=0 width="150" alt="Marian Avram">
+<a href="/parlamentari/l2012/mari/Avram_Marian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Avram_Marian.jpg" border=0 width="150" alt="Marian Avram"></a>
 <br>b.  14 aug. 1967
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Marian AVRAM</h1>
 <div class="page-actions">
