--- a/www.cdep.ro/2820c1dfee0b5c83e9e1bd7c29b7ac070423c5ad.html
+++ b/www.cdep.ro/2820c1dfee0b5c83e9e1bd7c29b7ac070423c5ad.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Babus_Radu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Babus_Radu.jpg" border=0 width="150" alt="Radu Babuº"></a>
+<img src="/parlamentari/l2012/Babus_Radu.jpg" border=0 width="150" alt="Radu Babuº">
 <br>b.  18 nov. 1978
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Radu BABUª</h1>
 <div class="page-actions">
