--- a/www.cdep.ro/571d6e4164edf214891218a6d3e5935f5a4d5834.html
+++ b/www.cdep.ro/571d6e4164edf214891218a6d3e5935f5a4d5834.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Banicioiu_Nicolae.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Banicioiu_Nicolae.jpg" border=0 width="150" alt="Nicolae Bãnicioiu"></a>
+<img src="/parlamentari/l2012/Banicioiu_Nicolae.jpg" border=0 width="150" alt="Nicolae Bãnicioiu">
 <br>b.  26 mar. 1979
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Nicolae BÃNICIOIU</h1>
 <div class="page-actions">
