--- a/www.cdep.ro/1d1d4a126db94a295272d3ee7cb4c8706b0e06bc.html
+++ b/www.cdep.ro/1d1d4a126db94a295272d3ee7cb4c8706b0e06bc.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Birsasteanu_Florica.jpg" border=0 width="150" alt="Floricã Bîrsãºteanu">
+<a href="/parlamentari/l2012/mari/Birsasteanu_Florica.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Birsasteanu_Florica.jpg" border=0 width="150" alt="Floricã Bîrsãºteanu"></a>
 <br>b.  20 may 1959
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Floricã BÎRSÃªTEANU</h1>
 <div class="page-actions">
