--- a/www.cdep.ro/f0793ea026fc0e8dfb701135ddfa1788b367864d.html
+++ b/www.cdep.ro/f0793ea026fc0e8dfb701135ddfa1788b367864d.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Bogdan_Gheorghe_Danut.jpg" border=0 width="150" alt="Gheorghe-Dãnuþ Bogdan">
+<a href="/parlamentari/l2012/mari/Bogdan_Gheorghe_Danut.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Bogdan_Gheorghe_Danut.jpg" border=0 width="150" alt="Gheorghe-Dãnuþ Bogdan"></a>
 <br>b.  21 jul. 1968
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Gheorghe-Dãnuþ BOGDAN</h1>
 <div class="page-actions">
