--- a/www.cdep.ro/7f6c3657ea76e998a20af52a916115d476d0ad88.html
+++ b/www.cdep.ro/7f6c3657ea76e998a20af52a916115d476d0ad88.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Budurescu_Daniel_Stamate.jpg" border=0 width="150" alt="Daniel-Stamate Budurescu">
+<a href="/parlamentari/l2012/mari/Budurescu_Daniel_Stamate.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Budurescu_Daniel_Stamate.jpg" border=0 width="150" alt="Daniel-Stamate Budurescu"></a>
 <br>b.  21 oct. 1950
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Daniel-Stamate BUDURESCU</h1>
 <div class="page-actions">
