--- a/www.cdep.ro/4e8fc44b79a2a5e5a7059a15ee6de8897d86dc18.html
+++ b/www.cdep.ro/4e8fc44b79a2a5e5a7059a15ee6de8897d86dc18.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Chereches_Florica.jpg" border=0 width="150" alt="Florica Cherecheº">
+<a href="/parlamentari/l2012/mari/Chereches_Florica.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Chereches_Florica.jpg" border=0 width="150" alt="Florica Cherecheº"></a>
 <br>b.  31 jan. 1960
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Florica CHERECHEª</h1>
 <div class="page-actions">
