--- a/www.cdep.ro/7f68a90d50cc6d503bdc014ad85b9501004bc5cb.html
+++ b/www.cdep.ro/7f68a90d50cc6d503bdc014ad85b9501004bc5cb.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Ciurariu_Florin.jpg" border=0 width="150" alt="Florin Ciurariu">
+<a href="/parlamentari/l2012/mari/Ciurariu_Florin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Ciurariu_Florin.jpg" border=0 width="150" alt="Florin Ciurariu"></a>
 <br>b.  3 apr. 1971
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Florin CIURARIU</h1>
 <div class="page-actions">
