--- a/www.cdep.ro/92b4d345ea0a2a94da7f582b9aba40319fd6a8e0.html
+++ b/www.cdep.ro/92b4d345ea0a2a94da7f582b9aba40319fd6a8e0.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Cocei_Erland.jpg" border=0 width="150" alt="Erland Cocei">
+<a href="/parlamentari/l2012/mari/Cocei_Erland.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Cocei_Erland.jpg" border=0 width="150" alt="Erland Cocei"></a>
 <br>b.  13 mar. 1970
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Erland COCEI</h1>
 <div class="page-actions">
