--- a/www.cdep.ro/c50b5b8c3b99ce9a461f46940065b2f6539b943e.html
+++ b/www.cdep.ro/c50b5b8c3b99ce9a461f46940065b2f6539b943e.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Cristea_Victor.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Cristea_Victor.jpg" border=0 width="150" alt="Victor Cristea"></a>
+<img src="/parlamentari/l2012/Cristea_Victor.jpg" border=0 width="150" alt="Victor Cristea">
 <br>b.  1 jul. 1949
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Victor CRISTEA</h1>
 <div class="page-actions">
