--- a/www.cdep.ro/02d15eebb12de30c19d2c28679952801dc5aaa60.html
+++ b/www.cdep.ro/02d15eebb12de30c19d2c28679952801dc5aaa60.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Dascalu_Constantin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dascalu_Constantin.jpg" border=0 width="150" alt="Constantin Dascãlu"></a>
+<img src="/parlamentari/l2012/Dascalu_Constantin.jpg" border=0 width="150" alt="Constantin Dascãlu">
 <br>b.  23 mar. 1950
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Constantin DASCÃLU</h1>
 <div class="page-actions">
