--- a/www.cdep.ro/64c7ce1fa5cd4e11fafa1749922b3937aec39811.html
+++ b/www.cdep.ro/64c7ce1fa5cd4e11fafa1749922b3937aec39811.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Dobre_Victor.jpg" border=0 width="150" alt="Victor Paul Dobre">
+<a href="/parlamentari/l2012/mari/Dobre_Victor.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dobre_Victor.jpg" border=0 width="150" alt="Victor Paul Dobre"></a>
 <br>b.  11 feb. 1952
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Victor Paul DOBRE</h1>
 <div class="page-actions">
