--- a/www.cdep.ro/8f8266ee92c1c93afb2cd4673473798148ec6eb7.html
+++ b/www.cdep.ro/8f8266ee92c1c93afb2cd4673473798148ec6eb7.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Dragusanu_Vasile_Catalin.jpg" border=0 width="150" alt="Vasile-Cãtãlin Drãguºanu">
+<a href="/parlamentari/l2012/mari/Dragusanu_Vasile_Catalin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dragusanu_Vasile_Catalin.jpg" border=0 width="150" alt="Vasile-Cãtãlin Drãguºanu"></a>
 <br>b.  5 jun. 1979
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Vasile-Cãtãlin DRÃGUªANU</h1>
 <div class="page-actions">
