--- a/www.cdep.ro/637953d133b4f27e78818ef1df3349224e2396f1.html
+++ b/www.cdep.ro/637953d133b4f27e78818ef1df3349224e2396f1.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Fonta_Nutu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Fonta_Nutu.jpg" border=0 width="150" alt="Nuþu Fonta"></a>
+<img src="/parlamentari/l2012/Fonta_Nutu.jpg" border=0 width="150" alt="Nuþu Fonta">
 <br>b.  27 aug. 1963
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Nuþu FONTA</h1>
 <div class="page-actions">
