--- a/www.cdep.ro/1e757889698dcf6e979e829b292f00b88415243f.html
+++ b/www.cdep.ro/1e757889698dcf6e979e829b292f00b88415243f.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Harau_Eleonora_Carmen.jpg" border=0 width="150" alt="Eleonora-Carmen Hãrãu">
+<a href="/parlamentari/l2012/mari/Harau_Eleonora_Carmen.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Harau_Eleonora_Carmen.jpg" border=0 width="150" alt="Eleonora-Carmen Hãrãu"></a>
 <br>b.  4 nov. 1960
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Eleonora-Carmen HÃRÃU</h1>
 <div class="page-actions">
