--- a/www.cdep.ro/c32c318b0dd417abf72f40d51287639f8803c124.html
+++ b/www.cdep.ro/c32c318b0dd417abf72f40d51287639f8803c124.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Dobre_Mircea_Titus.jpg" border=0 width="150" alt="Mircea-Titus Dobre">
+<a href="/parlamentari/l2012/mari/Dobre_Mircea_Titus.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dobre_Mircea_Titus.jpg" border=0 width="150" alt="Mircea-Titus Dobre"></a>
 <br>b.  20 dec. 1978
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Mircea-Titus DOBRE</h1>
 <div class="page-actions">
