--- a/www.cdep.ro/4a27b325e5144a5c9c8fa621f2bab6de4e58fa73.html
+++ b/www.cdep.ro/4a27b325e5144a5c9c8fa621f2bab6de4e58fa73.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Dragomir_Maria.jpg" border=0 width="150" alt="Maria Dragomir">
+<a href="/parlamentari/l2012/mari/Dragomir_Maria.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dragomir_Maria.jpg" border=0 width="150" alt="Maria Dragomir"></a>
 <br>b.  2 sep. 1957
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Maria DRAGOMIR</h1>
 <div class="page-actions">
