--- a/www.cdep.ro/783de12c8cf16f95a1ea26a1d46799270858ebc2.html
+++ b/www.cdep.ro/783de12c8cf16f95a1ea26a1d46799270858ebc2.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Fejer_Laszlo_Odon.jpg" border=0 width="150" alt="László-Õdõn Fejér">
+<a href="/parlamentari/l2012/mari/Fejer_Laszlo_Odon.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Fejer_Laszlo_Odon.jpg" border=0 width="150" alt="László-Õdõn Fejér"></a>
 <br>b.  11 nov. 1961
 </div><div class="boxTitle"><h1 style="line-height: 110%;">FEJÉR László-Õdõn</h1>
 <div class="page-actions">
