--- a/www.cdep.ro/886d1e078c7012943de7edcb8fcb5322255a1a13.html
+++ b/www.cdep.ro/886d1e078c7012943de7edcb8fcb5322255a1a13.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Ghita_Sebastian.jpg" border=0 width="150" alt="Sebastian-Aurelian Ghiþã">
+<a href="/parlamentari/l2012/mari/Ghita_Sebastian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Ghita_Sebastian.jpg" border=0 width="150" alt="Sebastian-Aurelian Ghiþã"></a>
 <br>b.  10 nov. 1978
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Sebastian-Aurelian GHIÞÃ</h1>
 <div class="page-actions">
