--- a/www.cdep.ro/7d86f7067f3b08e2675ace3b5c4a93594d4b02f4.html
+++ b/www.cdep.ro/7d86f7067f3b08e2675ace3b5c4a93594d4b02f4.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Gust_Balosin.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Gust_Balosin.jpg" border=0 width="150" alt="Florentin Gust Bãloºin"></a>
+<img src="/parlamentari/l2012/Gust_Balosin.jpg" border=0 width="150" alt="Florentin Gust Bãloºin">
 <br>b.  15 apr. 1979
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Florentin GUST BÃLOªIN</h1>
 <div class="page-actions">
