--- a/www.cdep.ro/d5ccb11844dbc1e3142ead65d8d527d2957a7e86.html
+++ b/www.cdep.ro/d5ccb11844dbc1e3142ead65d8d527d2957a7e86.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Harbuz_Liviu.jpg" border=0 width="150" alt="Liviu Harbuz">
+<a href="/parlamentari/l2012/mari/Harbuz_Liviu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Harbuz_Liviu.jpg" border=0 width="150" alt="Liviu Harbuz"></a>
 <br>b.  18 jun. 1962
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Liviu HARBUZ</h1>
 <div class="page-actions">
