--- a/www.cdep.ro/8b010a7c918bc820dbfeec335771bb8dc4b03f05.html
+++ b/www.cdep.ro/8b010a7c918bc820dbfeec335771bb8dc4b03f05.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Hulea_Ioan.jpg" border=0 width="150" alt="Ioan Hulea">
+<a href="/parlamentari/l2012/mari/Hulea_Ioan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Hulea_Ioan.jpg" border=0 width="150" alt="Ioan Hulea"></a>
 <br>b.  13 aug. 1957
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ioan HULEA</h1>
 <div class="page-actions">
