--- a/www.cdep.ro/65a4920260cc145fe327ae4e00132dbbb90a1b07.html
+++ b/www.cdep.ro/65a4920260cc145fe327ae4e00132dbbb90a1b07.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Intotero_Natalia_Elena.jpg" border=0 width="150" alt="Natalia-Elena Intotero">
+<a href="/parlamentari/l2012/mari/Intotero_Natalia_Elena.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Intotero_Natalia_Elena.jpg" border=0 width="150" alt="Natalia-Elena Intotero"></a>
 <br>b.  14 jan. 1976
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Natalia-Elena INTOTERO</h1>
 <div class="page-actions">
