--- a/www.cdep.ro/bc5ed973e0e41e9f2d6092e34dd39db415b5389d.html
+++ b/www.cdep.ro/bc5ed973e0e41e9f2d6092e34dd39db415b5389d.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Korodi_Attila.jpg" border=0 width="150" alt="Attila Korodi">
+<a href="/parlamentari/l2012/mari/Korodi_Attila.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Korodi_Attila.jpg" border=0 width="150" alt="Attila Korodi"></a>
 <br>b.  23 jun. 1977
 </div><div class="boxTitle"><h1 style="line-height: 110%;">KORODI Attila</h1>
 <div class="page-actions">
