--- a/www.cdep.ro/5ccc2245aaf01cc828f497657208b342b2a309bd.html
+++ b/www.cdep.ro/5ccc2245aaf01cc828f497657208b342b2a309bd.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Manda_Claudiu.jpg" border=0 width="150" alt="Iulian Claudiu Manda">
+<a href="/parlamentari/l2012/mari/Manda_Claudiu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Manda_Claudiu.jpg" border=0 width="150" alt="Iulian Claudiu Manda"></a>
 <br>b.  20 dec. 1975
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Iulian Claudiu MANDA</h1>
 <div class="page-actions">
