--- a/www.cdep.ro/05fbe40fa7e85bba429057226054fd7142707097.html
+++ b/www.cdep.ro/05fbe40fa7e85bba429057226054fd7142707097.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Marcu_Viorica.jpg" border=0 width="150" alt="Viorica Marcu">
+<a href="/parlamentari/l2012/mari/Marcu_Viorica.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Marcu_Viorica.jpg" border=0 width="150" alt="Viorica Marcu"></a>
 <br>b.  20 aug. 1955
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Viorica MARCU</h1>
 <div class="page-actions">
