--- a/www.cdep.ro/983ea527e7630d3270f981142040afc9c83dcefc.html
+++ b/www.cdep.ro/983ea527e7630d3270f981142040afc9c83dcefc.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Nazare_Alexandru.jpg" border=0 width="150" alt="Alexandru Nazare">
+<a href="/parlamentari/l2012/mari/Nazare_Alexandru.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Nazare_Alexandru.jpg" border=0 width="150" alt="Alexandru Nazare"></a>
 <br>b.  25 jun. 1980
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Alexandru NAZARE</h1>
 <div class="page-actions">
