--- a/www.cdep.ro/9ef77292a5ea255660cc3af9fb71310596a5112f.html
+++ b/www.cdep.ro/9ef77292a5ea255660cc3af9fb71310596a5112f.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Negrut_Cornelia.jpg" border=0 width="150" alt="Cornelia Negruþ">
+<a href="/parlamentari/l2012/mari/Negrut_Cornelia.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Negrut_Cornelia.jpg" border=0 width="150" alt="Cornelia Negruþ"></a>
 <br>b.  10 may 1961
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Cornelia NEGRUÞ</h1>
 <div class="page-actions">
