--- a/www.cdep.ro/6281333831cd4792b1ea39d1f8d97c02adca99a6.html
+++ b/www.cdep.ro/6281333831cd4792b1ea39d1f8d97c02adca99a6.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Nicolicea_Eugen.jpg" border=0 width="150" alt="Eugen Nicolicea">
+<a href="/parlamentari/l2012/mari/Nicolicea_Eugen.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Nicolicea_Eugen.jpg" border=0 width="150" alt="Eugen Nicolicea"></a>
 <br>b.  6 jun. 1956
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Eugen NICOLICEA</h1>
 <div class="page-actions">
