--- a/www.cdep.ro/62e5da487fdccec3e74e2cb1a0ca570a35f6da85.html
+++ b/www.cdep.ro/62e5da487fdccec3e74e2cb1a0ca570a35f6da85.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Palasca_Viorel.jpg" border=0 width="150" alt="Viorel Palaºcã">
+<a href="/parlamentari/l2012/mari/Palasca_Viorel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Palasca_Viorel.jpg" border=0 width="150" alt="Viorel Palaºcã"></a>
 <br>b.  24 aug. 1962
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Viorel PALAªCÃ</h1>
 <div class="page-actions">
