--- a/www.cdep.ro/5cafb3ff9218b1b306ada4a761cd5c34467b7cf5.html
+++ b/www.cdep.ro/5cafb3ff9218b1b306ada4a761cd5c34467b7cf5.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Paul_Maria_Andreea.jpg" border=0 width="150" alt="Maria-Andreea Paul">
+<a href="/parlamentari/l2012/mari/Paul_Maria_Andreea.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Paul_Maria_Andreea.jpg" border=0 width="150" alt="Maria-Andreea Paul"></a>
 <br>b.  10 sep. 1978
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Maria-Andreea PAUL</h1>
 <div class="page-actions">
