--- a/www.cdep.ro/7d35600519032fc322fc93170ec5048644c8f729.html
+++ b/www.cdep.ro/7d35600519032fc322fc93170ec5048644c8f729.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Petrescu_Petre.jpg" border=0 width="150" alt="Petre Petrescu">
+<a href="/parlamentari/l2012/mari/Petrescu_Petre.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Petrescu_Petre.jpg" border=0 width="150" alt="Petre Petrescu"></a>
 <br>b.  29 jun. 1956
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Petre PETRESCU</h1>
 <div class="page-actions">
