--- a/www.cdep.ro/40f0493792d4edeb002be3d60017b397aab3800d.html
+++ b/www.cdep.ro/40f0493792d4edeb002be3d60017b397aab3800d.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Pop_Georgian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Pop_Georgian.jpg" border=0 width="150" alt="Georgian Pop"></a>
+<img src="/parlamentari/l2012/Pop_Georgian.jpg" border=0 width="150" alt="Georgian Pop">
 <br>b.  13 jun. 1975
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Georgian POP</h1>
 <div class="page-actions">
