--- a/www.cdep.ro/a06e14b93cfb460de36a64c6dcc47e46f41bf799.html
+++ b/www.cdep.ro/a06e14b93cfb460de36a64c6dcc47e46f41bf799.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Popa_Octavian_Marius.jpg" border=0 width="150" alt="Octavian-Marius Popa">
+<a href="/parlamentari/l2012/mari/Popa_Octavian_Marius.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Popa_Octavian_Marius.jpg" border=0 width="150" alt="Octavian-Marius Popa"></a>
 <br>b.  4 aug. 1960
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Octavian-Marius POPA</h1>
 <div class="page-actions">
