--- a/www.cdep.ro/3117434a7bee9354adf71c83f50173e959cfe4b9.html
+++ b/www.cdep.ro/3117434a7bee9354adf71c83f50173e959cfe4b9.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Popescu_Dumitru_Iulian.jpg" border=0 width="150" alt="Dumitru-Iulian Popescu">
+<a href="/parlamentari/l2012/mari/Popescu_Dumitru_Iulian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Popescu_Dumitru_Iulian.jpg" border=0 width="150" alt="Dumitru-Iulian Popescu"></a>
 <br>b.  19 jun. 1962
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Dumitru-Iulian POPESCU</h1>
 <div class="page-actions">
