--- a/www.cdep.ro/cb79fef17a9ff9a5f8f59c737a15b5da0fba7370.html
+++ b/www.cdep.ro/cb79fef17a9ff9a5f8f59c737a15b5da0fba7370.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Radulescu_Romeo.jpg" border=0 width="150" alt="Romeo Rãdulescu">
+<a href="/parlamentari/l2012/mari/Radulescu_Romeo.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Radulescu_Romeo.jpg" border=0 width="150" alt="Romeo Rãdulescu"></a>
 <br>b.  29 nov. 1972
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Romeo RÃDULESCU</h1>
 <div class="page-actions">
