--- a/www.cdep.ro/f08b14e2c45424ca0977d27170094799979507bf.html
+++ b/www.cdep.ro/f08b14e2c45424ca0977d27170094799979507bf.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Gorghiu_Alina_Stefania.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Gorghiu_Alina_Stefania.jpg" border=0 width="150" alt="Alina-ªtefania Gorghiu"></a>
+<img src="/parlamentari/l2012/Gorghiu_Alina_Stefania.jpg" border=0 width="150" alt="Alina-ªtefania Gorghiu">
 <br>b.  16 sep. 1978
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Alina-ªtefania GORGHIU</h1>
 <div class="page-actions">
