--- a/www.cdep.ro/d2858ddb74e43d690a7439d719a889cc7dee2a50.html
+++ b/www.cdep.ro/d2858ddb74e43d690a7439d719a889cc7dee2a50.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/Grecea_Maria.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Grecea_Maria.jpg" border=0 width="150" alt="Maria Grecea"></a>
+<img src="/parlamentari/l2012/Grecea_Maria.jpg" border=0 width="150" alt="Maria Grecea">
 <br>b.  27 feb. 1974
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Maria GRECEA</h1>
 <div class="page-actions">
