--- a/www.cdep.ro/5f42ddb04593b3cdfcd7a40578ac8bca9ee296a1.html
+++ b/www.cdep.ro/5f42ddb04593b3cdfcd7a40578ac8bca9ee296a1.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Raetchi_Ovidiu_Alexandru.jpg" border=0 width="150" alt="Ovidiu Alexandru Raeþchi">
+<a href="/parlamentari/l2012/mari/Raetchi_Ovidiu_Alexandru.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Raetchi_Ovidiu_Alexandru.jpg" border=0 width="150" alt="Ovidiu Alexandru Raeþchi"></a>
 <br>b.  15 sep. 1979
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ovidiu Alexandru RAEÞCHI</h1>
 <div class="page-actions">
