--- a/www.cdep.ro/ed21b3128e0bb651459a23bdade088dfeabcb66d.html
+++ b/www.cdep.ro/ed21b3128e0bb651459a23bdade088dfeabcb66d.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/SurugiuIulianRadu.jpg" border=0 width="150" alt="Iulian-Radu Surugiu">
+<a href="/parlamentari/l2012/mari/SurugiuIulianRadu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/SurugiuIulianRadu.jpg" border=0 width="150" alt="Iulian-Radu Surugiu"></a>
 <br>b.  10 jul. 1984
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Iulian-Radu SURUGIU</h1>
 <div class="page-actions">
