--- a/www.cdep.ro/f1f5e9d1958e586f4757a757f1e0bc1f3cf029b4.html
+++ b/www.cdep.ro/f1f5e9d1958e586f4757a757f1e0bc1f3cf029b4.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/TomacEugen.jpg" border=0 width="150" alt="Eugen Tomac">
+<a href="/parlamentari/l2012/mari/TomacEugen.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TomacEugen.jpg" border=0 width="150" alt="Eugen Tomac"></a>
 <br>b.  27 jun. 1981
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Eugen TOMAC</h1>
 <div class="page-actions">
