--- a/www.cdep.ro/1142fd88960b381345469cbfcec7c8377d1dafc5.html
+++ b/www.cdep.ro/1142fd88960b381345469cbfcec7c8377d1dafc5.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<a href="/parlamentari/l2012/mari/TudorieVioleta.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/TudorieVioleta.jpg" border=0 width="150" alt="Violeta Tudorie"></a>
+<img src="/parlamentari/l2012/TudorieVioleta.jpg" border=0 width="150" alt="Violeta Tudorie">
 <br>b.  25 dec. 1970
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Violeta TUDORIE</h1>
 <div class="page-actions">
