--- a/www.cdep.ro/87b1d7a6d749cc11fc2387ba394910434d84d6e1.html
+++ b/www.cdep.ro/87b1d7a6d749cc11fc2387ba394910434d84d6e1.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Fenechiu_Relu.jpg" border=0 width="150" alt="Relu Fenechiu">
+<a href="/parlamentari/l2012/mari/Fenechiu_Relu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Fenechiu_Relu.jpg" border=0 width="150" alt="Relu Fenechiu"></a>
 <br>b.  3 jul. 1965
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Relu FENECHIU</h1>
 <div class="page-actions">
