--- a/www.cdep.ro/9ee53d8eefa838e9710c5f4124269e7b2b013a0f.html
+++ b/www.cdep.ro/9ee53d8eefa838e9710c5f4124269e7b2b013a0f.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Dumitru_Ioana_Jenica.jpg" border=0 width="150" alt="Ioana-Jenica Dumitru">
+<a href="/parlamentari/l2012/mari/Dumitru_Ioana_Jenica.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Dumitru_Ioana_Jenica.jpg" border=0 width="150" alt="Ioana-Jenica Dumitru"></a>
 <br>b.  1 aug. 1970
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Ioana-Jenica DUMITRU</h1>
 <div class="page-actions">
