--- a/www.cdep.ro/58d811b5070213371dd3d5e8e52ec0cf4244d772.html
+++ b/www.cdep.ro/58d811b5070213371dd3d5e8e52ec0cf4244d772.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Blajut_Viorel_Ionel.jpg" border=0 width="150" alt="Viorel-Ionel Blãjuþ">
+<a href="/parlamentari/l2012/mari/Blajut_Viorel_Ionel.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Blajut_Viorel_Ionel.jpg" border=0 width="150" alt="Viorel-Ionel Blãjuþ"></a>
 <br>b.  13 may 1973
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Viorel-Ionel BLÃJUÞ</h1>
 <div class="page-actions">
