--- a/www.cdep.ro/61ecabf88d5835e9f750d988b8537f7fe5ec5e90.html
+++ b/www.cdep.ro/61ecabf88d5835e9f750d988b8537f7fe5ec5e90.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Condurateanu_Andrei_Razvan.jpg" border=0 width="150" alt="Andrei-Rãzvan Condurãþeanu">
+<a href="/parlamentari/l2012/mari/Condurateanu_Andrei_Razvan.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Condurateanu_Andrei_Razvan.jpg" border=0 width="150" alt="Andrei-Rãzvan Condurãþeanu"></a>
 <br>b.  11 jul. 1970
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Andrei-Rãzvan CONDURÃÞEANU</h1>
 <div class="page-actions">
