--- a/www.cdep.ro/5941a414dd12b3a85c74c76c36ad2d0377a2921e.html
+++ b/www.cdep.ro/5941a414dd12b3a85c74c76c36ad2d0377a2921e.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Guran_Virgil.jpg" border=0 width="150" alt="Virgil Guran">
+<a href="/parlamentari/l2012/mari/Guran_Virgil.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Guran_Virgil.jpg" border=0 width="150" alt="Virgil Guran"></a>
 <br>b.  12 may 1965
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Virgil GURAN</h1>
 <div class="page-actions">
