--- a/www.cdep.ro/1df8bb89ca41eb5d5d38877d106e908a0af4be18.html
+++ b/www.cdep.ro/1df8bb89ca41eb5d5d38877d106e908a0af4be18.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Ionescu_Aurelian.jpg" border=0 width="150" alt="Aurelian Ionescu">
+<a href="/parlamentari/l2012/mari/Ionescu_Aurelian.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Ionescu_Aurelian.jpg" border=0 width="150" alt="Aurelian Ionescu"></a>
 <br>b.  17 oct. 1977
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Aurelian IONESCU</h1>
 <div class="page-actions">
