--- a/www.cdep.ro/cb16b854928125ddad85350378d19e15be7fe53b.html
+++ b/www.cdep.ro/cb16b854928125ddad85350378d19e15be7fe53b.html
@@ -267,7 +267,7 @@
 <div id="olddiv">
 
 <div class="boxStiri"><div class="profile-dep clearfix"><div class="profile-pic-dep" style="text-align: center;">
-<img src="/parlamentari/l2012/Laza_Matiuta_Liviu.jpg" border=0 width="150" alt="Liviu Laza-Matiuþa">
+<a href="/parlamentari/l2012/mari/Laza_Matiuta_Liviu.jpg" class="highslide" onclick="return hs.expand(this)"><img src="/parlamentari/l2012/Laza_Matiuta_Liviu.jpg" border=0 width="150" alt="Liviu Laza-Matiuþa"></a>
 <br>b.  10 jun. 1964
 </div><div class="boxTitle"><h1 style="line-height: 110%;">Liviu LAZA-MATIUÞA</h1>
 <div class="page-actions">
